enum EstadoVehiculo{
    DISPONIBLE,
    EN_ALQUILER,
    EN_MANTENIMIENTO,
    NECESITA_LIMPIEZA
}